# sophia

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  README.ru.md  install.ps1  install.sh  requirements.txt  run.sh  sophia-bot.service  start.py
bot/: config.py  handlers.py  inference.py  main.py  memory.py  pairing.py  queue.py
data/instructions/: AGENTS.md  IDENTITY.md  MEMORY.md.example  SOUL.md  TOOLS.md.example  USER.md
data/instructions/memory/: 2026-04-08.md  2026-04-09.md
data/memory/: 2026-04-08.md
proxy/: .env.example  Cargo.toml  install-linux.sh  install-mac.sh  install-windows.ps1  nginx-sophia-proxy.conf  setup-openclaw.ps1  setup-openclaw.sh  sophia-proxy.service
proxy/src/: claude.rs  config.rs  convert.rs  handlers.rs  main.rs  types.rs
scripts/: send.sh  set-commands.sh  stt.sh  tts.sh
sophia-nexus/: Cargo.toml
sophia-nexus/src/: main.rs  paths.rs  server.rs
sophia-rescue/: Cargo.toml
sophia-rescue/src/: api.rs  commands.rs  config.rs  main.rs  watchdog.rs
src/: config.rs  format.rs  handlers.rs  inference.rs  lib.rs  main.rs  memory.rs  outbox.rs  pairing.rs  queue.rs  sessions.rs  telegram.rs  update_check.rs  vecstore.rs  watchdog.rs
