[workspace]
members = [".", "sophia-rescue", "sophia-nexus"]
resolver = "3"

[package]
name = "sophia"
version = "1.0.0-beta"
edition = "2024"

[dependencies]
grammers-client = { version = "0.9", features = ["html"] }
grammers-mtsender = "0.9"
grammers-session = "0.9"
grammers-tl-types = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dashmap = "6"
shlex = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
pulldown-cmark = "0.12"
usearch = "2"
fastembed = "5"
