[package]
name = "sophia-rescue"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = "0.9"
grammers-mtsender = "0.9"
grammers-session = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
